fix align style mainPage

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -4,6 +4,7 @@ footer {
         text-align: center;
         ul {
             justify-content: center;
+            padding: 0;
         }
     }
 
