--- a/src/components/pages/content.scss
+++ b/src/components/pages/content.scss
@@ -1,8 +1,7 @@
 .content {
-    padding: 80px 100px;
-    text-align: center;
     .wrapper {
-        padding: 0 275px;
+        padding: 80px 275px;
+        text-align: center;
     }
 
     h2 {
